@@ -2,9 +2,9 @@ require 'cucumber/ast/comment'
 require 'cucumber/ast/tags'
 require 'cucumber/ast/features'
 require 'cucumber/ast/feature'
+require 'cucumber/ast/background'
 require 'cucumber/ast/scenario'
 require 'cucumber/ast/scenario_outline'
-require 'cucumber/ast/background'
 require 'cucumber/ast/step'
 require 'cucumber/ast/table'
 require 'cucumber/ast/py_string'
