@@ -14,26 +14,31 @@ module Cucumber
           [:comment, "# My feature comment\n"], 
           [:tag, "one"], 
           [:tag, "two"], 
-          [:scenario, 9, "Scenario:", 
-            "A Scenario", 
-            [:comment, "    # My scenario comment  \n# On two lines \n"], 
-            [:tag, "three"], 
-            [:tag, "four"], 
-            [:step, 10, "Given", "a passing step with an inline arg:",
-              [:table, 
-                [:row, 
-                  [:cell, "1"], [:cell, "22"], [:cell, "333"]], 
-                [:row, 
-                  [:cell, "4444"], [:cell, "55555"], [:cell, "666666"]]]], 
-            [:step, 11, "Given", "a happy step with an inline arg:", 
-              [:py_string, "\n I like\nCucumber sandwich\n"]], 
-            [:step, 12, "Given", "a failing step"]]]
+          [:background, 2, 'Background:',
+            [:step, 3, "Given", "a passing step"],
+            [:scenario, 9, "Scenario:", 
+              "A Scenario", 
+              [:comment, "    # My scenario comment  \n# On two lines \n"], 
+              [:tag, "three"], 
+              [:tag, "four"], 
+              [:step, 10, "Given", "a passing step with an inline arg:",
+                [:table, 
+                  [:row, 
+                    [:cell, "1"], [:cell, "22"], [:cell, "333"]], 
+                  [:row, 
+                    [:cell, "4444"], [:cell, "55555"], [:cell, "666666"]]]], 
+              [:step, 11, "Given", "a happy step with an inline arg:", 
+                [:py_string, "\n I like\nCucumber sandwich\n"]], 
+              [:step, 12, "Given", "a failing step"]]]]
       end
 
       it "should only visit scenarios that match" do
-        s1 = mock("Scenario 1")
-        s2 = mock("Scenario 2")
-        s3 = mock("Scenario 3")
+        step_mother = Object.new
+        step_mother.extend(StepMother)
+        
+        s1 = mock("Scenario 1").as_null_object
+        s2 = mock("Scenario 2").as_null_object
+        s3 = mock("Scenario 3").as_null_object
         [s1, s2, s3].each{|s| s.should_receive(:feature=)}
         f = Ast::Feature.new(
           Ast::Comment.new(""),
@@ -52,7 +57,7 @@ module Cucumber
 
         s2.should_receive(:accept)
 
-        visitor = Visitor.new(nil)
+        visitor = Visitor.new(step_mother)
         visitor.visit_feature(f)
       end
     end
